<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/avocado_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/circle_primary_dark"
                android:contentDescription="@string/avocado_cd"
                app:srcCompat="@drawable/ic_avocado" />

            <ImageButton
                android:id="@+id/banana_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/banana_cd"
                app:srcCompat="@drawable/ic_banana" />

            <ImageButton
                android:id="@+id/strawberry_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/strawberry_cd"
                app:srcCompat="@drawable/ic_strawberry" />

            <ImageButton
                android:id="@+id/watermelon_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/watermelon_cd"
                app:srcCompat="@drawable/ic_watermelon" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/grape_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/grape_cd"
                app:srcCompat="@drawable/ic_grape" />

            <ImageButton
                android:id="@+id/kiwi_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/kiwi_cd"
                app:srcCompat="@drawable/ic_kiwi" />

            <ImageButton
                android:id="@+id/orange_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/orange_cd"
                app:srcCompat="@drawable/ic_orange" />

            <ImageButton
                android:id="@+id/pineapple_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/pineapple_cd"
                app:srcCompat="@drawable/ic_pineapple" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/apple_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/apple_cd"
                app:srcCompat="@drawable/ic_apple" />

            <ImageButton
                android:id="@+id/lemon_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/lemon_cd"
                app:srcCompat="@drawable/ic_lemon" />

            <ImageButton
                android:id="@+id/cherry_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/cherry_cd"
                app:srcCompat="@drawable/ic_cherry" />

            <ImageButton
                android:id="@+id/pear_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/avatar_background"
                android:contentDescription="@string/pear_cd"
                app:srcCompat="@drawable/ic_pear" />
        </TableRow>
    </TableLayout>
</ScrollView>