<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/room_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/room_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/room_name"
        app:layout_constraintStart_toStartOf="@+id/room_name"
        app:layout_constraintTop_toBottomOf="@+id/room_name">

        <RadioButton
            android:id="@+id/is_public_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/public_room" />

        <RadioButton
            android:id="@+id/is_private_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_room" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>